--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "lodash": "^4.17.4",
+    "moment": "^2.19.2",
     "mysql": "^2.15.0"
   }
 }
